Added Block Framework

--- a/HelloWorldMod/src/main/resources/assets/helloworldmod/lang/en_us.json
+++ b/HelloWorldMod/src/main/resources/assets/helloworldmod/lang/en_us.json
@@ -1,5 +1,6 @@
 {
     "item.helloworldmod.poggers_item": "Poggers Item",
     "item.helloworldmod.banana": "Banana",
-    "itemGroup.helloworldmod": "Hello World Tab"
+    "itemGroup.helloworldmod": "Hello World Tab",
+    "block.helloworldmod.poggers_block": "Poggers Block"
 }
